[package]
name = "chatsapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.22.3", features = ["tokio-comp"] }
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros", "net", "io-std"] }
